test/syntax/fail/lexer/char/more_than_one_char.expected
File "dummy.sync", line 1, character 16:
 1 | let f x = 'foo'
                    ^

Error: Character literal must be a single character.
